--- a/TodoServerApp/Components/_Imports.razor
+++ b/TodoServerApp/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using TodoServerApp
 @using TodoServerApp.Components
+@using TodoServerApp.Data.Interfaces
+@using Microsoft.AspNetCore.Authorization
+@using TodoServerApp.Data
