--- a/TodoServerApp/Components/Pages/Tasks.razor
+++ b/TodoServerApp/Components/Pages/Tasks.razor
@@ -10,42 +10,33 @@
 
 <h1>Мои задачи</h1>
 
-
-<table class="table table-bordered">
-    <thead>
+<div class="container">
+    @if (tasks == null)
+    {
         <tr>
-            <th>ИД</th>
-            <th>Заголовок</th>
-            <th>Описание</th>
-            <th>Создано</th>
-            <th>Завершено</th>
+            <td colspan="5">Loading...</td>
         </tr>
-   </thead>
-        
-   <tbody> 
-        @if (tasks == null)
-        {
-            <tr>
-                <td colspan = "5">Loading...</td>
-            </tr>
-        }
+    }
 
-        else
-        
-        {
-            @foreach(var task in tasks)
+    else
+    {
+        <div class="card-group">    
+            @foreach (var task in tasks)
             {
-                <tr>
-                    <td>Id</td>
-                    <td>@task.Title</td>
-                    <td>@task.Description</td>
-                    <td>@task.CreatedDate</td>
-                    <td>@task.FinishDate</td>
-                </tr>
+                <div class="card">
+                    <div class="card-header"> 
+                        @task.Title
+                        </div>
+                        <div class="class-body">
+                        <p>@task.Description</p>
+                        <p>@task.CreatedDate</p>
+                        </div>
+                </div>
             }
-        }
-   </tbody>
-</table>
+        </div>
+    }
+</div>
+
 @code {
     IEnumerable<TaskItem>? tasks;
 
