--- a/TodoServerApp/Components/Pages/Tasks.razor
+++ b/TodoServerApp/Components/Pages/Tasks.razor
@@ -1,10 +1,8 @@
 ﻿@page "/"
-
 @rendermode InteractiveServer
 @inject IDataService data
 @attribute [Authorize]
-
-
+@inject NavigationManager navigate
 
 <PageTitle>Задачи</PageTitle>
 
@@ -14,35 +12,61 @@
     @if (tasks == null)
     {
         <tr>
-            <td colspan="5">Loading...</td>
+            <td colspan="5">Loaging ...</td>
         </tr>
     }
-
     else
     {
-        <div class="card-group">    
+        <div class="btn-group m-2">
+            <button class="btn btn-primary" @onclick="AddTask">Новая задача</button>
+        </div>
+        <div class="card-group">
             @foreach (var task in tasks)
             {
                 <div class="card">
-                    <div class="card-header"> 
+                    <div class="card-header">
                         @task.Title
-                        </div>
-                        <div class="class-body">
+                    </div>
+                    <div class="card-body">
                         <p>@task.Description</p>
                         <p>@task.CreatedDate</p>
-                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a class="btn btn-primary" href="tasks/@task.Id">Изменить</a>
+                        <button class="btn btn-primary" @onclick="async () => await DeleteTask(task.Id)">Удалить</button>
+                    </div>
                 </div>
             }
         </div>
     }
 </div>
 
-@code {
+@code
+{
     IEnumerable<TaskItem>? tasks;
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        tasks = await data.GetTaskItemsAsync();
+        tasks = await data.GetAllAsync();
+    }
+
+    void AddTask()
+    {
+        navigate.NavigateTo("tasks/add");
+
+    }
+    async Task DeleteTask(int id)
+    {
+        await data.DeleteAsync(id);
+        tasks = await data.GetAllAsync();
+    }
+}
+
+    }
+    async Task DeleteTask(int id)
+    {
+        await data.DeleteAsync(id);
+        tasks = await data.GetAllAsync();
     }
 }
