--- a/TodoServerApp/Components/_Imports.razor
+++ b/TodoServerApp/Components/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+﻿﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -9,6 +9,6 @@
 @using Microsoft.JSInterop
 @using TodoServerApp
 @using TodoServerApp.Components
+@using TodoServerApp.Data
 @using TodoServerApp.Data.Interfaces
 @using Microsoft.AspNetCore.Authorization
-@using TodoServerApp.Data
